[gd_scene load_steps=21 format=3 uid="uid://cq5lqarmml37j"]

[ext_resource type="PackedScene" uid="uid://c76tontoxnues" path="res://Scenes/bot_base_scene.tscn" id="1_w366l"]
[ext_resource type="Script" path="res://Scripts/slice_bot.gd" id="2_djnog"]
[ext_resource type="Texture2D" uid="uid://derkqy65b5a8" path="res://Assets/Sprites/Slice Bot/Idle.png" id="2_vu8nx"]
[ext_resource type="Resource" uid="uid://bmwhc7oqs6k0" path="res://Resources/default_slicebot_movement_data.tres" id="3_6rg6a"]
[ext_resource type="Texture2D" uid="uid://dvohv2fl61quh" path="res://Assets/Sprites/Slice Bot/Walk.png" id="3_60mrp"]
[ext_resource type="Texture2D" uid="uid://ce04ec1ytya32" path="res://Assets/Sprites/Slice Bot/Attack.png" id="4_hpheq"]
[ext_resource type="PackedScene" uid="uid://c1ogve4pckv7j" path="res://Scenes/slice_bot_ghost.tscn" id="4_mgysq"]
[ext_resource type="Texture2D" uid="uid://bgwhg4isnjxpb" path="res://Assets/Sprites/Slice Bot/Hurt.png" id="5_ug3sw"]
[ext_resource type="Texture2D" uid="uid://ca3c821ltc0c0" path="res://Assets/Sprites/Slice Bot/Death.png" id="6_gm444"]
[ext_resource type="Script" path="res://Components/hitbox_component.gd" id="9_otryi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hla7u"]
resource_local_to_scene = true
size = Vector2(21, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fxss"]
resource_local_to_scene = true
size = Vector2(19, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thrjo"]
size = Vector2(36, 7)

[sub_resource type="Animation" id="Animation_vr23a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4dd25"]
resource_name = "attack"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_hpheq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_j408f"]
resource_name = "death"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_gm444")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_kbxfy"]
resource_name = "hurt"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ug3sw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_tht0n"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vu8nx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_nhn6w"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_60mrp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k4nld"]
_data = {
"RESET": SubResource("Animation_vr23a"),
"attack": SubResource("Animation_4dd25"),
"death": SubResource("Animation_j408f"),
"hurt": SubResource("Animation_kbxfy"),
"idle": SubResource("Animation_tht0n"),
"walk": SubResource("Animation_nhn6w")
}

[node name="SliceBot" instance=ExtResource("1_w366l")]
z_index = 5
script = ExtResource("2_djnog")
movement_data = ExtResource("3_6rg6a")
dash_ghost_image = ExtResource("4_mgysq")
dash_scale = 1.0
dash_duration = 0.2

[node name="AttackSFX" parent="." index="0"]
bus = &"SFX"

[node name="HurtSFX" parent="." index="1"]
bus = &"SFX"

[node name="MoveSFX" parent="." index="2"]
bus = &"SFX"

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(-0.5, -14.5)
shape = SubResource("RectangleShape2D_hla7u")

[node name="HurtboxComponent" parent="." index="4"]
collision_layer = 2

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(-0.5, -12)
shape = SubResource("RectangleShape2D_3fxss")

[node name="SelectionIndicatorSprite" parent="." index="5"]
visible = false
position = Vector2(0, -36)

[node name="HealthBar" parent="." index="6" node_paths=PackedStringArray("stats_component")]
offset_top = -29.0
offset_bottom = -25.0
stats_component = NodePath("../StatsComponent")

[node name="HitboxComponent" type="Area2D" parent="." index="8"]
collision_layer = 2
collision_mask = 4
script = ExtResource("9_otryi")
damage = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(0, -13.5)
shape = SubResource("RectangleShape2D_thrjo")
disabled = true

[node name="AttackCooldownTimer" type="Timer" parent="." index="9"]
one_shot = true

[node name="GhostTimer" type="Timer" parent="." index="10"]
wait_time = 0.03

[node name="HurtComponent" parent="." index="11" node_paths=PackedStringArray("stats_component", "hurtbox_component", "health_bar")]
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")
health_bar = NodePath("../HealthBar")

[node name="Sprite2D" parent="Sprites" index="0"]
position = Vector2(8, -24)
texture = ExtResource("6_gm444")
hframes = 4

[node name="AnimationPlayer" parent="." index="13"]
libraries = {
"": SubResource("AnimationLibrary_k4nld")
}
autoplay = "idle"

[node name="BorderBounceComponent" parent="." index="14" node_paths=PackedStringArray("actor")]
actor = NodePath("..")

[node name="DestroyedComponent" parent="." index="15" node_paths=PackedStringArray("actor", "stats_component")]
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")

[node name="ExplosionSpawner" parent="." index="16"]
position = Vector2(0, -8)

[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
